# Raytracing

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cc  main.cpp
include/: camara.h  color.h  hittable.h  hittable_list.h  material.h  ray.h  rtweekend.h  sphere.h  vec3.h
lib/: CMakeLists.txt  shape.cpp
tests/: CMakeLists.txt  shape_test.cpp
